re-organized code order for nav section to easily navigate between code sections. Added a custom bootstrap file to fix horizontal collapse issue. Customized follow-caret dropdown looks.

--- a/css/custom.css
+++ b/css/custom.css
@@ -17,23 +17,15 @@ nav.navbar {
   height: 52px;
   border-bottom: 2px solid #dddddd;
 }
-li.active.nav-blog-link {
-  border-bottom: 2px solid red;
-}
 li.active.nav-blog-link a {
   color: red!important;
-}
-a#logo {
-  margin-left: 0;
-}
-div.navbar-right {
-  margin-right: 0px;
+  border-bottom: 2px solid red;
 }
 li#nav-like-btn a, li#nav-follow-btn a {
-  padding: 8px 8px;
+  padding: 8px 6px;
 }
 li#nav-rss-btn a {
-  padding: 7px 8px 8px;
+  padding: 7px 6px 8px;
 }
 ul.navbar-nav li.nav-font a {
   font-weight: bold;
@@ -43,6 +35,42 @@ ul.navbar-nav li.nav-font a {
   margin: auto 0;
   width
 }
+
+div.navbar-search-section, 
+div.navbar-login-section,
+div.navbar-follow-btn-section{
+  border-left: 1px solid #dddddd;
+}
+
+@media screen and (max-width: 768px) {
+  ul.navbar-follow-caret li a span.visible-xs {
+    display:inline-block!important;
+  }
+}
+
+ul.navbar-follow-caret ul{
+  background-color: #405061;
+  width:320px;
+}
+ul.navbar-follow-caret ul li a {
+  color:white;
+  height: 84px;
+  text-align: center;
+  padding:30px 0;
+  margin: auto;
+}
+ul.navbar-follow-caret ul form input{
+  margin:0 0 0 5px;
+  width: calc(100% - 56px);
+}
+p#follow-caret-p {
+  color:white;
+  text-align: center;
+  margin-bottom: 0;
+}
+
+
+
 /*Sidebar*/
 
 div.sidebar-box {
